# subrub

./: CMakeLists.txt  LICENSE.md  README.md  documentation.md  main.c
.github/workflows/: build-modern.yml  build.yml
